fix: remove proctising component collapsed sidebar and start fixing project component

--- a/src/components/collapsingSidebar/style.css
+++ b/src/components/collapsingSidebar/style.css
@@ -11,6 +11,10 @@
   border: 2px solid lightgray;
 }
 
+/* .sidebar.collapsed {
+  max-width: 0rem;
+} */
+
 .sidebar__header {
   display: flex;
   flex-direction: column;
