--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -93,29 +93,17 @@ body {
   display: none
 }
 
-/* Projects 
+/* Project page details */
 
-.projects {
-  overflow: hidden;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-} */
-
-/* Project details */
+.project-details {
+  padding: 12rem 0;
+}
 
 .project-detalis__title-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 60px;
-}
-
-.project-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 3rem;
-  padding-bottom: 3rem;
 }
 
 .project-details__cover {
@@ -131,28 +119,6 @@ body {
   font-size: 24px;
   line-height: 1.3;
 }
-
-.project-details__link {
-  display: inline-block;
-  height: 48px;
-  padding: 12px 28px;
-  font-size: 16px;
-  font-weight: 500;
-  color: var(--white);
-  letter-spacing: 0.15px;
-  border-radius: var(--border-rs);
-  background-color: var(--accent);;
-  transition: opacity 0.2s ease-in;
-}
-
-.project-details__link:hover {
-  opacity: 0.8;
-}
-
-.project-details__link:focus {
-  opacity: 0.4;
-}
-
 
 /* Content list */
 
